add logic to show Dynamic content on Top Shelf

--- a/tvOS-Sampler/Info.plist
+++ b/tvOS-Sampler/Info.plist
@@ -24,6 +24,17 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>tvOS-Sampler URL</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tvossampler</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
